--- a/catering-services/package.json
+++ b/catering-services/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^11.6.0",
     "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
@@ -20,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8"
   },
