--- a/catering-services/package.json
+++ b/catering-services/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8"
   },
